Started working on login/signin stuff
also renamed index file from .php to .html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <a href="#"><button class="login_button">Sign in</button></a>
+            <a href="HTML/signin.html"><button class="login_button">Sign in</button></a>
         </header>
         <section class="main_sectoin">
             <h1>Arctic Airlines</h1>
