login works (kinda)

--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -43,6 +43,7 @@
                     <option value="Canada">Canada</option>
                     <option value="Australia">Australia</option>
                     <option value="Japan">日本 (Japan)</option>
+                    <option value="Other">--OTHER--</option>
                 </select>
                 <br><input type="submit" value="next">
             </form>
