--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -4,20 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../CSS/style.css">
-        <title>Sign In - Arctic Airlines</title>
+        <title>Sign in - Arctic Airlines</title>
     </head>
     <body>
         <header>
             <img class="logo" src="../art/logo.png">
             <nav>
                 <ul class="nav_links">
-                    <li><a href="../index.html">Home Page</a></li>
-                    <li><a href="../index.html">Already have an account?</a></li>
+                    <li><a href="../index.php">Home Page</a></li>
+                    <li><a href="../PHP/login.php">Already have an account?</a></li>
                 </ul>
             </nav>
         </header>
         <div>
-            <form action="../PHP/signin2.php" method='GET' enctype='multipart/form-data'>
+            <form action="../PHP/signin.php" method='GET' enctype='multipart/form-data'>
                 <label>Name:</label>
                 <input type="text" name="fname" placeholder="Enter your first name:" required><br>
                 <label>Last Name:</label>
