log in compleated!!!

--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -19,9 +19,9 @@
         </header>
         <div class="idk">
             <form class="idk_form" action="../PHP/signin.php" method='GET' enctype='multipart/form-data'>
-                <label>Name:</label><br>
+                <label>First name:</label><br>
                 <input class="input" type="text" name="fname" placeholder="Enter your first name:" required><br>
-                <label>Last Name:</label><br>
+                <label>Last name:</label><br>
                 <input class="input" type="text" name="lname" placeholder="Enter your last name:" required><br>
                 <label>Country:</label><br>
                 <select class="input" name="country" required>
@@ -36,7 +36,7 @@
                     <option value="France">France</option>
                     <option value="Italy">Italia (Italy)</option>
                     <option value="Switzerland">Schweiz (Switzerland)</option>
-                    <option value="FIslands">Forroyar (Faroe Islands)</option>
+                    <option value="Faroe">Forroyar (Faroe Islands)</option>
                     <option value="Iceland">Ísland (Iceland)</option>
                     <option value="Greenland">Kalaallit Nunaat (Greenland)</option>
                     <option value="UK">United Kingdom</option>
