--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="../art/logo.png">
+            <a href="../index.php" class="logo"><img src="../art/logo.png"></a>
             <nav>
                 <ul class="nav_links">
                     <li><a href="../index.php">Home Page</a></li>
