still admin routes ehhh
this is so tedious why am i not getting paid for this

--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -25,6 +25,7 @@
                 <input class="input" type="text" name="lname" placeholder="Enter your last name:" required><br>
                 <label>Country:</label><br>
                 <select class="input" name="country" required>
+                    <option value="" selected disabled hidden>Choose here</option>
                     <option value="Finland">Suomi (Finland)</option>
                     <option value="Norway">Norge (Norway)</option>
                     <option value="Sweden">Sverige (Sweden)</option>
